@@ -1,3 +1,10 @@
+2010-01-04  Roland McGrath  <roland@redhat.com>
+
+	* readelf.c (struct section_argument): Add bool member 'implicit'.
+	(parse_opt): Set it for -a cases, clear it for -x args.
+	(for_each_section_argument): Don't complain about a missing section by
+	name if it's implicit.
+
 2009-11-16  Roland McGrath  <roland@redhat.com>
 
 	* readelf.c (print_string_section): Punt SHT_NOBITS like empty
